# Android-Mem-Edit

./: CMakeLists.txt  main.cpp
.github/: trigger-ci.txt
.github/workflows/: main.yml  main6.yml
src/: libmemedit.cpp
